[package]
name = "urclvm_assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20.6"
tree-sitter-urcl = { git = "https://github.com/Terrain2/tree-sitter-urcl" }
byteorder = "1.4.3"

[dependencies.clap]
version = "3.1.17"
features = ["derive"]