[package]
name = "urclvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
derive_more = "0.99.17"
derive-try-from-primitive = "1.0.0"
fastrand = "1.7.0"
half = "1.8.2"
image = "0.24.2"
radix_fmt = "1.0.0"
unicode_reader = "1.0.2"
qoi = "0.4.0"
terminal = "0.2.1"

[dependencies.clap]
version = "3.2.2"
features = ["derive", "unstable-v4"]